--- a/.github/workflows/demo.yaml
+++ b/.github/workflows/demo.yaml
@@ -10,9 +10,14 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
+          distribution: 'jdk'
           java-version: 11
-      - name: Compile Java code
-        run: javac HelloWorldApp.java
-      - name: Run Java program
-        run: java HelloWorldApp
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+          
+      - uses: nyurik/action-setup-nginx@v1
+        id: nginx
+      - run: |
+          echo "Hello, world!" > "${{ steps.nginx.outputs.html-dir }}/index.html"
