--- a/.github/workflows/demo.yaml
+++ b/.github/workflows/demo.yaml
@@ -7,11 +7,12 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
+      - name: java 
+        uses: actions/setup-java@v4
         with:
-          distribution: 'jdk'
-          java-version: 17
+          distribution: 'temurin' # See 'Supported distributions' for available options
+          java-version: '21'
+        
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
